# initx

./: .devenv.flake.nix  .gitignore  Cargo.toml  devenv.nix  flake.nix  result
.devenv/: devenv.json  flake.json  input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
.devenv/state/cargo-install/: .crates.toml  .crates2.json
src/: main.rs
templates/rust/: .meta.toml
templates/typescript/: .gitignore  .meta.toml  devenv.nix  package.json  tsconfig.json
templates/typescript/src/: index.mts
