[package]
name = "initx"
description = "Initialization tool for new projects"
license = "MIT"
repository = "https://github.com/tascord/initx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
walkdir = "2.5.0"
